Bug 1648085 - Create family entries for any localized font-family names exposed by fontconfig. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D83569